--- a/1.html
+++ b/1.html
@@ -3,17 +3,45 @@
 <head>
   <title>web1 - book</title>
   <meta charset="utf-8">
+<style>
+body {background-color: lightblue;}
+</style>
 </head>
 
 <body>
-<h1><a href="index.html">추리소설&넷플릭스 추천</a></h1>
+<h1><a href="index.html">추리소설과 넷플릭스 추천</a></h1>
+<hr>
 <ol>
   <li><a href="1.html">추리소설</a></li>
   <li><a href="2.html">넷플릭스영화</a></li>
   <li><a href="3.html">넷플릭스드라마</a></li>
 </ol>
-<h2>추리소설</h2>
+<h2>히가시노게이고 소설</h2>
+<p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9-fv1NKpUaY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 몇년동안 읽어본 책중에 가장 재밌었던<br>
 반적,추리,스릴러 소설을 추천해드립니다 ^_^!
+<p>
+  <div id="disqus_thread"></div>
+  <script>
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://wanna01.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
 </body>
 </html>
