--- a/2.html
+++ b/2.html
@@ -3,18 +3,46 @@
 <head>
   <title>web1 - book</title>
   <meta charset="utf-8">
+  <style>
+    body {background-color: lightblue;}
+  </style>
 </head>
 
 <body>
-<h1><a href="index.html">추리소설&넷플릭스 추천</a></h1>
+<h1><a href="index.html">추리소설과 넷플릭스 추천</a></h1>
+<hr>
 <ol>
   <li><a href="1.html">추리소설</a></li>
-  <li><a href="2.html">넷플릭스드라마</a></li>
-  <li><a href="3.html">넷플릭스영화</a></li>
+  <li><a href="2.html">넷플릭스영화</a></li>
+  <li><a href="3.html">넷플릭스드라마</a></li>
 </ol>
-<h2>넷플릭스 드라</h2>
+<h2>넷플릭스 영화 승리호</h2>
+<p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2yfo6oWdOF0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 전세계 화제작인 드라마,영화가 컨테트 집약체 넷플릭스 너무<br>
 재밌는게 많아서 무엇을 봐야할지 모르시는 분께 시간 가는줄<br>
 모르고 볼 수 있는<strong>스릴러,추리작품</strong> 추천해드립니다!
+<p>
+  <div id="disqus_thread"></div>
+  <script>
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://wanna01.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
 </body>
 </html>
