--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
   <title>web1 - Welcome</title>
   <meta charset="utf-8">
+<style>
+  body {background-color: lightblue;}
+</style>
 </head>
 
 <body>
-<h1><a href="index.html">추리소설와 넷플릭스 추천</a></h1>
+<h1><a href="index.html">추리소설와 넷플릭스 추천</a></h1><hr>
 <ol>
   <li><a href="1.html">추리소설</a></li>
   <li><a href="2.html">넷플릭스</a> 드라마</li>
@@ -17,5 +20,26 @@
 전세계 화제작인 드라마,영화가 컨테트 집약체 넷플릭스 너무<br>
 재밌는게 많아서 무엇을 봐야할지 모르시는 분께 시간 가는줄<br>
 모르고 볼 수 있는<strong>스릴러,추리작품</strong> 추천해드립니다!
+<p>
+  <div id="disqus_thread"></div>
+  <script>
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://wanna01.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
 </body>
 </html>
