--- a/1.html
+++ b/1.html
@@ -3,26 +3,28 @@
 <head>
   <title>web1 - book</title>
   <meta charset="utf-8">
-<style>
-body {background-color: lightblue;}
-</style>
-</head>
+    <link rel="stylesheet" type="text/css" href="css/header.css">
+  </head>
 
-<body>
-<h1><a href="index.html">추리소설과 넷플릭스 추천</a></h1>
-<hr>
-<ol>
-  <li><a href="1.html">추리소설</a></li>
-  <li><a href="2.html">넷플릭스영화</a></li>
-  <li><a href="3.html">넷플릭스드라마</a></li>
-</ol>
-<h2>히가시노게이고 소설</h2>
+  <body>
+  <h1><a href="index.html">Netflix</a></h1>
+
+  <div id="grid">
+  <ol>
+    <li><a href="1.html">넷플릭스 일본작품</a></li>
+    <li><a href="2.html">넷플릭스 드라마</a></li>
+    <li><a href="3.html">넷플릭스 영화</a></li>
+  </ol>
+<div>
+<h2>넷플릭스 일본작품</h2>
 <p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/9-fv1NKpUaY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
 몇년동안 읽어본 책중에 가장 재밌었던<br>
 반적,추리,스릴러 소설을 추천해드립니다 ^_^!
 <p>
+</div>
+</div>
   <div id="disqus_thread"></div>
   <script>
       /**
