--- a/2.html
+++ b/2.html
@@ -3,20 +3,20 @@
 <head>
   <title>web1 - book</title>
   <meta charset="utf-8">
-  <style>
-    body {background-color: lightblue;}
-  </style>
-</head>
+  <link rel="stylesheet" type="text/css" href="css/header.css">
+  </head>
 
-<body>
-<h1><a href="index.html">추리소설과 넷플릭스 추천</a></h1>
-<hr>
-<ol>
-  <li><a href="1.html">추리소설</a></li>
-  <li><a href="2.html">넷플릭스영화</a></li>
-  <li><a href="3.html">넷플릭스드라마</a></li>
-</ol>
-<h2>넷플릭스 영화 승리호</h2>
+  <body>
+  <h1><a href="index.html">Netflix</a></h1>
+
+  <div id="grid">
+  <ol>
+    <li><a href="1.html">넷플릭스 일본작품</a></li>
+    <li><a href="2.html">넷플릭스 드라마</a></li>
+    <li><a href="3.html">넷플릭스 영화</a></li>
+  </ol>
+  <div>
+<h2>넷플릭스 드라마</h2>
 <p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/2yfo6oWdOF0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
@@ -24,6 +24,8 @@
 재밌는게 많아서 무엇을 봐야할지 모르시는 분께 시간 가는줄<br>
 모르고 볼 수 있는<strong>스릴러,추리작품</strong> 추천해드립니다!
 <p>
+</div>
+</div>
   <div id="disqus_thread"></div>
   <script>
       /**
