--- a/index.html
+++ b/index.html
@@ -3,24 +3,32 @@
 <head>
   <title>web1 - Welcome</title>
   <meta charset="utf-8">
-<style>
-  body {background-color: lightblue;}
-</style>
+  <link rel="stylesheet" type="text/css" href="css/header.css">
+
 </head>
 
 <body>
-<h1><a href="index.html">추리소설와 넷플릭스 추천</a></h1><hr>
+<h1><a href="index.html">Netflix</a></h1>
+
+<div id="grid">
 <ol>
-  <li><a href="1.html">추리소설</a></li>
-  <li><a href="2.html">넷플릭스</a> 드라마</li>
-  <li><a href="3.html">넷플릭스</a> 영화</li>
+  <li><a href="1.html">넷플릭스 일본애니</a></li>
+  <li><a href="2.html">넷플릭스 드라마</a></li>
+  <li><a href="3.html">넷플릭스 영화</a></li>
 </ol>
-<h2>추리소설과 넷플릭스 작품 추천</h2>
-직접 보고 읽고 가장 재밌었던 작품을 추천해드립니다!<br>
-전세계 화제작인 드라마,영화가 컨테트 집약체 넷플릭스 너무<br>
-재밌는게 많아서 무엇을 봐야할지 모르시는 분께 시간 가는줄<br>
-모르고 볼 수 있는<strong>스릴러,추리작품</strong> 추천해드립니다!
-<p>
+<div>
+<h2>넷플릭스</h2>
+<p> 1997년에 마크 랜돌프와 리드 헤이스팅스가 설립하였고, 1998년부터 서비스를 시작했다. 처음에는 비디오 대여 사업부터 시작, DVD를 거쳐 현재는 온라인 스트리밍을 위주로 서비스하고 있다. 총 4,200만여 장의 영상물을 보유하고 있으며, 스트리밍을 이용하는 가입자는 2017년 7월부로 전세계 1억 명을 돌파했고, 2018년 3분기 기준으로 1억 3,700만 명을 넘어섰다. 이 중 미국에서만 6,000만 명이 넘는 이용자를 보유하고 있다. 미국뿐 아니라 캐나다, 멕시코, 유럽 일부 국가, 한국, 일본 등 전세계로 서비스를 확대하고 있다. 2018년 기준 미국, 유럽에서 온라인 동영상 시장 점유율 1위를 기록하고 있으며 2019년 기준 전 세계 동영상 스트리밍 시장에서 30%의 점유율을 차지하고 있는 것으로 분석된다.
+
+미국 내 프라임타임 인터넷 트래픽의 3분의 1을 넷플릭스가 사용하고 있다는 CNN의 보도가 있을 정도로 엄청난 인기를 끌고 있으며 방송 산업의 역사를 새로 쓰고 있다고 봐도 무방할 정도이다. 스포티파이와 함께 일종의 스트리밍 붐을 일으켰다고 평가받고 있으며, 2009년부터 9년간 기록한 수익률은 무려 4,912%. 당시 5.67달러였던 주가는 2020년 12월 기준으로 534.45달러에 달한다.
+
+이른바 코드커팅(Cord-Cutting)[1] 현상을 주도하고 있는 회사이며 이 때문에 미국 내에서는 매년 케이블 TV의 구독자가 점점 줄어들고 있다고 한다. 또한 미디어 산업 내에서 블루레이를 비롯한 물리적 기록매체의 입지가 좁아져 가는 가장 큰 원인인 회사이기도 하다. 미국의 TV 역사에서 NBC, ABC, CBS, FOX 등의 지상파 방송사가 주도한 첫 번째 물결, CNN, MTV, HBO, ESPN 등의 케이블 채널이 주도한 두 번째 물결에 이어 OTT 서비스가 주도하고 있는 세 번째 물결을 상징하는 기업으로 사실상 21세기 엔터테인먼트 산업에서 시장의 판도를 가장 크게 변화시킨 회사라고 할 수 있겠다.
+
+2018년 1월, 창사 이래 처음으로 시가총액 1000억 달러를 넘긴 후 같은 해 5월에는 장중 한때 월트 디즈니 컴퍼니의 시가총액마저 뛰어넘어 잠깐 동안 세계 최대의 엔터테인먼트 기업이라는 타이틀을 얻었다.[2] 일단은 신흥 기업이 전통의 미디어 거물을 꺾은 기념비적인 사건이기는 하지만 넷플릭스의 가치가 아직까지는 고평가 되고 있다는 분석도 제법 있다. 특히나 후일에 변제해야 할 장기 부채의 규모가 상당하기 때문에[3] 이 기세가 지속될 수 있는지에 대해서 의견이 엇갈리는 상황. 그리고 2019년 디즈니가 21세기 폭스를 인수하면서 시가총액 차이는 디즈니가 큰 차이를 벌렸었다.
+
+</div>
+</div>
+
   <div id="disqus_thread"></div>
   <script>
       /**
