--- a/2.html
+++ b/2.html
@@ -18,14 +18,15 @@
   <div>
 <h2>넷플릭스 드라마</h2>
 <p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/2yfo6oWdOF0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</p>
-전세계 화제작인 드라마,영화가 컨테트 집약체 넷플릭스 너무<br>
-재밌는게 많아서 무엇을 봐야할지 모르시는 분께 시간 가는줄<br>
-모르고 볼 수 있는<strong>스릴러,추리작품</strong> 추천해드립니다!
+<iframe width="560" height="315" src="https://www.youtube.com/embed/JP4fwIm-CJE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+전세계 인기 드라마,영화를 볼수 있는 넷플릭스에서<br>
+무엇을 봐야할지 모르시는 분들께 시간 가는줄<br>
+모르고 볼 수 있는<strong>넷플릭스 드라마 스트레인저</strong> 추천해드립니다!<br>
+추리,스릴러물을 좋아하시는 분들께 적극 추천합니다!
 <p>
 </div>
 </div>
+<br><br>
   <div id="disqus_thread"></div>
   <script>
       /**
