--- a/1.html
+++ b/1.html
@@ -20,9 +20,8 @@
 <p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/XEmXrbvaRZM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
-넷플릭스 일본 로맨스영화 <strong>나는 어제 오늘의 너와 만난다</strong>를 추천해드립니다.<br>
-보고나면 며칠간 긴 여운이 남는 영화입니다.
-<p>
+<p>넷플릭스 일본 로맨스영화 <strong>나는 어제 오늘의 너와 만난다</strong>를 추천해드립니다.<br>
+보고나면 며칠간 긴 여운이 남는 영화입니다.</p>
 </div>
 </div>
 <br><br>
